--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@david.kucsai/react-pdf-table": "^0.4.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -11,6 +12,7 @@
     "@fullcalendar/react": "^5.11.2",
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^1.0.6",
+    "@react-pdf/renderer": "^3.0.2",
     "@redux-devtools/extension": "^3.2.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -18,11 +20,13 @@
     "axios": "^1.1.3",
     "chart.js": "^4.0.1",
     "color-scales": "^3.0.2",
+    "date-fns": "^2.29.3",
     "formik": "^2.2.9",
     "humanize-plus": "^1.8.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.0.1",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-export-table-to-excel": "^1.0.6",
     "react-helmet": "^6.1.0",
@@ -34,7 +38,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.6.1",
     "react-styled-carousel": "^0.5.1",
-    "react-to-print": "^2.14.10",
+    "react-to-print": "^2.14.11",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
